--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -3495,8 +3495,11 @@ a.subdued {
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   border-color: #b2b2b2;
-  background-color: #f8f8f8;
+  background-color: #33CD5F;
   background-image: linear-gradient(0deg, #b2b2b2, #b2b2b2 50%, transparent 50%);
+  -webkit-box-shadow: -2px 18px 60px -12px rgba(0,0,0,0.36);
+  -moz-box-shadow: -2px 18px 60px -12px rgba(0,0,0,0.36);
+  box-shadow: -2px 18px 60px -12px rgba(0,0,0,0.36);
   color: #444;
   position: absolute;
   bottom: 0;
