--- a/www/views/app/properties.html
+++ b/www/views/app/properties.html
@@ -5,7 +5,7 @@
   <ion-content>
     <div class="row categories-list">
 
-      <div ng-repeat="propertyImage_item in propertyImage" class="col col-50">
+      <div ng-repeat="propertyImage_item in propertyImage" class="col">
 
         <a class="feed-category" ng-click="toggleLeftSideMenu(propertyImage_item.PropertyId, propertyImage_item.PropertyName, propertyImage_item.FileName)">
           <pre-img ratio="_1_1" helper-class="square-image">
