--- a/www/views/app/side-menu.html
+++ b/www/views/app/side-menu.html
@@ -49,6 +49,18 @@
           <i class="icon ion-android-exit"></i>
           <h2 class="menu-text">Eviction</h2>
         </ion-item>
+        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.Evictions">
+          <i class="icon ion-ios-home"></i>
+          <h2 class="menu-text">Marketing</h2>
+        </ion-item>
+        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.Evictions">
+          <i class="icon ion-ribbon-a"></i>
+          <h2 class="menu-text">Special Deals</h2>
+        </ion-item>
+        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.Evictions">
+          <i class="icon ion-speakerphone"></i>
+          <h2 class="menu-text">Campaign</h2>
+        </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.properties">
           <i class="icon ion-android-home"></i>
           <h2 class="menu-text">Choose Property</h2>
