--- a/www/views/app/side-menu.html
+++ b/www/views/app/side-menu.html
@@ -8,7 +8,7 @@
         </button>
       </ion-nav-buttons>
       <ion-nav-buttons side="right">
-       	<button class="button updateMeBth" ng-click="updateMe()" >Update Me</button>
+      	<img src="img/UpdateMeBtn.png" class="updateMeBth" ng-click="updateMe()">       	
        </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
